--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
   </head>
   <body>
+    <div class="header">
+      <div class="header-right">
+        <a href="#login-page">Login</a>
+      </div>
+      <h1> 5280 Landmarks </h1>
+    </div>
+    <p> Check it out! </p>
 
   </body>
 </html>
-
-
-
-
