--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
       </div>
       <h1> 5280 Landmarks </h1>
     </div>
-    <p> Check it out! </p>
+    <div class="sub-header">
+      <a href="#Building">Building</a>
+      <a href="#Art">Art</a>
+      <a href="#Featured">Featured</a>
+  </div>
+  <p> Check it out! </p>
+
 
   </body>
 </html>
