--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     </div>
     <div class="main-section">
-      <image src="./images/1.jpg"width="50%" >
+      <image src="./images/1.jpg">
       <h2>Denver Art Museum</h2>
       <p>Lorem ipsum dolor sit amet, quis idque munere est ex. Eos id soluta meliore menandri, sed ex graeci prompta sapientem. Cum in verterem partiendo, quod partiendo principes vix et. Ne eam virtute abhorreant. At qui doming nemore mediocritatem, ei pri bonorum blandit, vim elitr recusabo salutatus eu.
       </p><p>
