--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   </head>
   <body>
     <div class="header">
+      <div class="page-title">
+        <h1> 5280 Landmarks </h1>
+      </div>
       <div class="header-right">
         <a href="#login-page">Login</a>
       </div>
-      <h1> 5280 Landmarks </h1>
     </div>
     <div class="sub-header">
       <a href="#Featured">Featured</a>
