Final touches on challenge2 css

--- a/index_2.html
+++ b/index_2.html
@@ -16,19 +16,11 @@
       </div>
     </div>
     <div class="sub-header">
-      <a href="#Featured">Featured</a>
-      <a href="#Art">Art</a>
       <a href="#Building">Building</a>
+      <a href="#Art">Art</a>
+      <a href="#Featured">Featured</a>
     </div>
-    <div class="sidebar">
-      <h3>Larimer Square</h3>
-      <image src="./images/2.jpg">
-      <h3>Millenium Bridge</h3>
-      <image src="./images/5.jpg">
-      <h3>Molly Brown House</h3>
-      <image src="./images/6.jpg">
 
-    </div>
     <div class="main-section">
       <image src="./images/1.jpg">
       <h2>Denver Art Museum</h2>
@@ -40,6 +32,21 @@
       </p><p>
     Nam ad quas consul salutandi, sea ad verterem quaestio. Mei ea quot dictas. Eam choro eloquentiam eu, vim cu facete scriptorem. Mel at latine veritus.
       </p>
+    </div>
+
+    <div class="gallery">
+      <figure>
+        <img src="./images/2.jpg">
+        <figcaption>Larimer Square</figcaption>
+      </figure>
+      <figure>
+        <img src="./images/5.jpg">
+        <figcaption>Millenium Bridge</figcaption>
+      </figure>
+      <figure>
+        <img src="./images/3.jpg">
+        <figcaption>Molly Brown House</figcaption>
+      </figure>
     </div>
     <div class="footer">
 
