Adds dog and adjusts icons

--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <head>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
 </head>
 
 <body>
   <main>
     <div class="wrapper">
       <div id="rect"></div>
-      <div class="square" id="square_1"><i class="material-icons">cloud</i></div>
-      <div class="square" id="square_2"><i class="material-icons">motorcycle</i></div>
-      <div class="square" id="square_3"><i class="material-icons">traffic</i></div>
-      <div class="square" id="square_4"><i class="material-icons">bug_report</i></div>
-      <div class="square" id="square_5"><i class="material-icons">credit_card</i></div>
-      <div class="square" id="square_6"><i class="material-icons">event</i></div>
-      <div class="square" id="square_7"><i class="material-icons">fingerprint</i></div>
-      <div id="gallery"><i class="material-icons">cloud</i></div>
+      <div class="square" id="square_1"><i class="fa fa-id-card" aria-hidden="true"></i><p>profile</p></div>
+      <div class="square" id="square_2"><i class="fa fa-battery-half" aria-hidden="true"></i><p>experience</p></div>
+      <div class="square" id="square_3"><i class="fa fa-book" aria-hidden="true"></i><p>education</p></div>
+      <div class="square" id="square_4"><i class="fa fa-edit" aria-hidden="true"></i><p>blog</p></div>
+      <div class="square" id="square_5"><i class="fa fa-plus" aria-hidden="true"></i><p>social menu</p></div>
+      <div class="square" id="square_6"><i class="fa fa-podcast" aria-hidden="true"></i><p>podcast</p></div>
+      <div class="square" id="square_7"><i class="fa fa-bath" aria-hidden="true"></i><p>bath</p></div>
+      <div id="gallery">
+        <img src="dog.jpg" alt="">
+      </div>
     </div>
   </main>
 </body>
