finalizes including screenshot

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+  <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
@@ -7,7 +8,17 @@
 <body>
   <main>
     <div class="wrapper">
-      <div id="rect"></div>
+      <div id="rect">
+        <div id="rect-text-wrapper">
+          <h2>Barksley Pooper</h2>
+          <p>I'm a Dog, Graphic Designer, and Entrepeneur.</p>
+          <p>Take a look at my website to see what I ... squirrel!</p>
+          <button><i class="fa fa-download" aria-hidden="true"></i> resume</button>
+          <button><i class="fa fa-info" aria-hidden="true"></i> contact</button>
+
+        </div>
+
+      </div>
       <div class="square" id="square_1"><i class="fa fa-id-card" aria-hidden="true"></i><p>profile</p></div>
       <div class="square" id="square_2"><i class="fa fa-battery-half" aria-hidden="true"></i><p>experience</p></div>
       <div class="square" id="square_3"><i class="fa fa-book" aria-hidden="true"></i><p>education</p></div>
